<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.moqui</groupId>
    <artifactId>bitronix</artifactId>
    <version>4.0.0-BETA</version>
    <packaging>pom</packaging>
    <name>Bitronix Transaction Manager</name>
    <description>
        The Bitronix Transaction Manager (BTM) is a simple but complete
        implementation of the Jakarta Transactions 2.0 API.
    </description>
    <inceptionYear>2006</inceptionYear>
    <url>https://github.com/moqui/bitronix</url>
    <organization>
        <name>moqui</name>
        <url>https://moqui.org</url>
    </organization>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/moqui/bitronix/issues</url>
    </issueManagement>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>git@github.com:moqui/bitronix.git</url>
        <connection>scm:git:git@github.com/moqui/bitronix.git</connection>
        <developerConnection>scm:git:git@github.com:moqui/bitronix.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>taher</id>
            <name>Taher Alkhateeb</name>
            <email>taher@pythys.com</email>
            <roles>
                <role>Lead Maintainer</role>
            </roles>
        </developer>
        <developer>
            <id>brettwooldridge</id>
            <name>Brett Wooldridge</name>
            <roles>
                <role>Former Maintainer</role>
            </roles>
        </developer>
        <developer>
            <id>lorban</id>
            <name>Ludovic Orban</name>
            <roles>
                <role>Original Author</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <surefire.jvm.settings>-Xmx256m</surefire.jvm.settings>
    </properties>

    <modules>
        <module>btm</module>
        <module>btm-docs</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.moqui</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.moqui</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
                <classifier>test-sources</classifier>
            </dependency>
            <dependency>
                <groupId>org.moqui</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
                <classifier>sources</classifier>
            </dependency>
            <dependency>
                <groupId>org.moqui</groupId>
                <artifactId>btm</artifactId>
                <version>${project.version}</version>
                <classifier>javadoc</classifier>
            </dependency>
            <dependency>
                <groupId>org.moqui</groupId>
                <artifactId>btm</artifactId>
                <type>test-jar</type>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.transaction</groupId>
                <artifactId>jakarta.transaction-api</artifactId>
                <version>2.0.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.geronimo.specs</groupId>
                <artifactId>geronimo-jms_1.1_spec</artifactId>
                <version>1.1.1</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.21</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.17</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>2.0.17</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.20.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-Xlint:unchecked</arg>
                            <arg>-Xlint:deprecation</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.7</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>1.7</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.12.0</version>
                    <configuration>
                        <doclint>none</doclint>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>
                                    true
                                </addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>3.0.0</version>
                    <configuration>
                        <java>
                            <removeUnusedImports />
                            <importOrder />
                            <eclipse>
                                <file>${session.executionRootDirectory}/style.xml</file>
                            </eclipse>
                        </java>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
